--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Type your code here -->
     <h1>CRIC PRO SCORECARD</h1>
     <div class="container">
-        <header><img src="assets/Logo.JPG"></header>
+        <img src="assets/Logo.JPG">
         <h1><strong>ICC WORLD CUP 2011</strong></h1>
         <h3>India Vs Srilanka Scorecard</h3>
     
@@ -33,8 +33,7 @@
             <tr>
                 <!-- <td><a href="target="popup
                     onclick="window.open('assets/Player1.png','popup','width=600,height=600'); return false;">Virendra shewag</a></td> -->
-                    <td><a class="popup" href="#">Virendra Sehwag<span><img src="./assets/Player6.png"
-                        alt="pic"></span></a> </td>
+                    <td><a href="target="popup onclick="window.open('assets/Player6.png','popup','width=600,height=600'); return false;">Virendra Sehwag</a></td>   
                 <td>Lbw b l Malinga</td>
                 <td>0</td>
                 <td>2</td>
@@ -45,8 +44,7 @@
             <tr>
                 <!-- <td><a href="target="popup
                     onclick="window.open('assets/Player5.png','popup','width=600,height=600'); return false;">Sachin Tendulkar</a></td> -->
-                    <td><a class="popup" href="#">Sachin<span><img src="./assets/Player5.png"
-                        alt="pic"></span></a> </td>
+                    <td><a href="target="popup onclick="window.open('assets/Player5.png','popup','width=600,height=600'); return false;">Sachin Tendulkar</a></td>
                     <td>c K Sangakara b l Malinga</td>
                 <td>18</td>
                 <td>14</td>
@@ -85,7 +83,7 @@
             </tr>
             <tr>
                 <td><a href="target="popup
-                    onclick="window.open('assets/Player1.png','popup','width=600,height=600'); return false;">Yuvraj</a></td>
+                    onclick="window.open('assets/Player1.png','popup','width=600,height=600'); return false;">Yuvraj Singh</a></td>
                 <td>21</td>
                 <td>24</td>
                 <td>2</td>
